# Remora-RP2040-W5500

./: CMakeLists.txt  README.md  boardconfig.cpp  boardconfig.h  configuration.h  extern.h  remora.cpp  remora.h  tftpserver.cpp
LinuxCNC/Configs/remora-rp2040/: autosave.halscope  picoBob-config.txt  remora-rp2040.hal  remora-rp2040.ini  w5500-evb-pico-config.txt
drivers/pin/: pin.cpp  pin.h
firmware/: remora-rp2040-1.0.1.uf2  remora-rp2040-2.0.0.uf2
interrupt/: interrupt.cpp  interrupt.h  irqHandlers.h
modules/blink/: blink.cpp  blink.h
modules/comms/: RemoraComms.h
modules/debug/: debug.cpp
modules/digitalPin/: digitalPin.cpp  digitalPin.h
modules/stepgen/: stepgen.cpp  stepgen.h
port/ioLibrary_Driver/inc/: w5x00_spi.h
port/ioLibrary_Driver/src/: w5x00_spi.c
thread/: createThreads.h  pruThread.cpp  pruThread.h  timer.cpp  timer.h
